--- a/falsebottom.cfg
+++ b/falsebottom.cfg
@@ -1,16 +1,16 @@
-;radius
+;radius of the false bottom
 172
-;border
+;border by the edge of the false bottom
 10
-;slot length
+;cutout slot length
 50
-;row angle offset
+;cutout slot angle
 45
-;slot width
+;cutout slot width
 1
-;slot offset x
+;cutout slot offset x
 10
-;slot offset y
+;cutout slot offset y
 4
-;slot min length
+;cutout slot min length
 10
